@@ -6,15 +6,19 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
-import uz.crm.crmbackend.entity.User;
-import uz.crm.crmbackend.entity.UserRole;
-import uz.crm.crmbackend.repository.user.RoleRepo;
-import uz.crm.crmbackend.repository.user.UserRepo;
-import uz.crm.crmbackend.tools.Constant;
-import uz.crm.crmbackend.tools.exceptions.UserRoleNotFoundException;
+import uz.buzzard.buzzard_uz.entity.User;
+import uz.buzzard.buzzard_uz.entity.UserRole;
+import uz.buzzard.buzzard_uz.repository.entity.RoleRepo;
+import uz.buzzard.buzzard_uz.repository.entity.UserRepo;
+import uz.buzzard.buzzard_uz.tools.Constant;
+import uz.buzzard.buzzard_uz.tools.exceptions.UserRoleNotFoundException;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+
+
 
 
 @Component
@@ -40,12 +44,11 @@ public class DataLoader implements CommandLineRunner {
             roleRepo.save(new UserRole(Constant.STUDENT));
             // this is super admin
             User admin = new User();
-            admin.setFatherName("");
-            admin.setPassportSerialNumber("");
-            admin.setFirstName("Mirkomil");
-            admin.setLastName("Ablayev");
-            admin.setUserRoleSet(new HashSet<>(List.of(roleRepo.findByNameAndIsActive(Constant.SUPER_ADMIN,true).orElseThrow(() ->
-                    new UserRoleNotFoundException(Constant.SUPER_ADMIN+" role not found")))));
+            admin.setFullName("Ablayev");
+            admin.setUserRoleSet(new HashSet<UserRole>(Collections.singletonList(
+                    roleRepo.findByNameAndIsActive(Constant.SUPER_ADMIN, true).orElseThrow(() ->
+                            new UserRoleNotFoundException(Constant.SUPER_ADMIN + " role not found"))
+            )));
             admin.setUsername("1");
             admin.setPassword(passwordEncoder.encode("1"));
             userRepo.save(admin);
